--- a/router/package.json
+++ b/router/package.json
@@ -16,9 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@actions/cache": "^4.0.0",
     "@octokit/rest": "^21.0.0",
     "commander": "^13.0.0",
     "minimatch": "^10.0.1",
+    "openai": "^4.77.0",
     "yaml": "^2.7.0",
     "zod": "^3.24.1"
   },
