--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Test
         run: npm run test
+        env:
+          CI_HAS_LSOF: 'true' # Ubuntu has lsof - enables socket detection tests
 
   container-security:
     name: Container Security Scan
