fix: update Dockerfile for OpenCode v1.1.26 and npm workspace support
- OpenCode: Fix GitHub org (sst -> anomalyco), upgrade v0.8.0 to v1.1.26
- OpenCode: Add SHA256 checksum verification for security
- Docker: Use repo root as build context for config/ access
- npm: Use workspace flag with --ignore-scripts for monorepo
- Security: Use existing 'node' user instead of creating 'reviewer'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         run: npm run build --workspace=router
 
       - name: Build container image
-        run: docker build -t odd-ai-reviewers-router:ci -f router/Dockerfile router
+        run: docker build -t odd-ai-reviewers-router:ci -f router/Dockerfile .
 
       - name: Trivy scan (HIGH,CRITICAL)
         uses: aquasecurity/trivy-action@0.28.0
