--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -103,7 +103,7 @@ jobs:
           OWNER=$(echo "${{ inputs.target_repo }}" | cut -d'/' -f1)
           REPO=$(echo "${{ inputs.target_repo }}" | cut -d'/' -f2)
 
-          node dist/main.js review \
+          node router/dist/main.js review \
             --repo ../target \
             --base ${{ steps.base.outputs.sha }} \
             --head ${{ inputs.target_ref }} \
