feat: enterprise API key hardening
- Remove OPENCODE_API_KEY everywhere (never existed in implementation)
- Add ANTHROPIC_API_KEY to workflow secrets and env
- Add preflight validation: fail fast if enabled agent missing required API keys
- Add regression test blocking OPENCODE_API_KEY references

Preflight validation runs after config load, before any agent execution.
Error messages include: agent name, which keys are missing, exact env var names.

--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -29,11 +29,11 @@ on:
         type: string
         default: '"ubuntu-latest"'
     secrets:
-      OPENCODE_API_KEY:
-        description: 'OpenCode.ai API key'
-        required: false
       OPENAI_API_KEY:
-        description: 'OpenAI API key (for PR-Agent)'
+        description: 'OpenAI API key (for opencode or pr_agent)'
+        required: false
+      ANTHROPIC_API_KEY:
+        description: 'Anthropic API key (for opencode with Claude models)'
         required: false
       OLLAMA_BASE_URL:
         description: 'Ollama server URL for local LLM'
@@ -105,8 +105,8 @@ jobs:
         working-directory: router
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENCODE_API_KEY: ${{ secrets.OPENCODE_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           OLLAMA_BASE_URL: ${{ secrets.OLLAMA_BASE_URL }}
         run: |
           OWNER=$(echo "${{ inputs.target_repo }}" | cut -d'/' -f1)
