--- a/config/defaults.ai-review.yml
+++ b/config/defaults.ai-review.yml
@@ -9,13 +9,23 @@ triggers:
   branches: [main]
 
 passes:
+  # Static analysis - required by default (fails review if semgrep fails)
   - name: static
-    agents: [semgrep]
+    agents: [semgrep, reviewdog]
     enabled: true
+    required: true # Static analysis must succeed
 
-  - name: semantic
+  # Cloud AI review - optional (skips gracefully if no API key)
+  - name: cloud-ai
     agents: [opencode]
     enabled: true
+    required: false # Skip if OPENAI_API_KEY not configured
+
+  # Local LLM review - optional (skips if Ollama unavailable)
+  - name: local-ai
+    agents: [local_llm]
+    enabled: true
+    required: false # Skip if Ollama not reachable
 
 limits:
   max_files: 50
