feat(config): centralize model default in config.models.default
- Add models.default to config schema (defaults to gpt-4o-mini)
- Add resolveEffectiveModel() with clear precedence: MODEL env > config > fallback
- Add effectiveModel to AgentContext (router resolves once, agents use it)
- Update opencode, pr_agent, ai_semantic_review to use context.effectiveModel
- Update defaults.ai-review.yml with models section
- Add 7 new tests for model resolution

--- a/config/defaults.ai-review.yml
+++ b/config/defaults.ai-review.yml
@@ -34,6 +34,11 @@ limits:
   max_usd_per_pr: 1.00
   monthly_budget_usd: 100
 
+# Model configuration
+# Precedence: MODEL env var > models.default > hardcoded fallback
+models:
+  default: gpt-4o-mini
+
 reporting:
   github:
     mode: checks_and_comments
