--- a/router/package.json
+++ b/router/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@actions/cache": "^4.0.0",
+    "@anthropic-ai/sdk": "0.71.2",
     "@octokit/rest": "^21.0.0",
     "commander": "^13.0.0",
     "minimatch": "^10.0.1",
