feat: add dynamic test count badge
Implementation:
- package.json: Added test:ci script to both root and router
- router test:ci: Uses Vitest JSON reporter for accurate counts
- ci.yml: Parses test-results.json and updates Gist on main pushes
- README.md: Added shields.io endpoint badge from Gist

Setup required (one-time):
1. Create a Gist with file tests.json
2. Create GIST_TOKEN secret with gist write permission
3. Create TEST_BADGE_GIST_ID variable with the Gist ID
4. Update README.md badge URL with actual Gist ID

The badge shows: '294 passed, 3 skipped' (accurate from Vitest)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,38 @@ jobs:
         run: npm run build
 
       - name: Test
-        run: npm run test
+        run: npm run test:ci
         env:
           CI_HAS_LSOF: 'true' # Ubuntu has lsof - enables socket detection tests
+
+      - name: Generate test badge data
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          PASSED=$(jq '.numPassedTests' router/test-results.json)
+          SKIPPED=$(jq '.numPendingTests' router/test-results.json)
+          FAILED=$(jq '.numFailedTests' router/test-results.json)
+
+          if [ "$FAILED" -gt 0 ]; then
+            COLOR="red"
+            MESSAGE="${PASSED} passed, ${FAILED} failed"
+          elif [ "$SKIPPED" -gt 0 ]; then
+            COLOR="green"
+            MESSAGE="${PASSED} passed, ${SKIPPED} skipped"
+          else
+            COLOR="brightgreen"
+            MESSAGE="${PASSED} passed"
+          fi
+
+          echo "{\"schemaVersion\":1,\"label\":\"tests\",\"message\":\"$MESSAGE\",\"color\":\"$COLOR\"}" > .github/badges/tests.json
+
+      - name: Update badge Gist
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: exuanbo/actions-deploy-gist@v1
+        with:
+          token: ${{ secrets.GIST_TOKEN }}
+          gist_id: ${{ vars.TEST_BADGE_GIST_ID }}
+          file_path: .github/badges/tests.json
+          file_type: text
 
   container-security:
     name: Container Security Scan
