--- a/router/package.json
+++ b/router/package.json
@@ -13,6 +13,7 @@
     "start": "node dist/main.js",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:ci": "vitest run --reporter=json --outputFile=test-results.json",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
