feat(docs): add interactive documentation viewer
- Add HTML documentation viewer at docs/viewer/
- Security: DOMPurify sanitization, CSP headers, path allowlisting
- Features: sidebar navigation, compare mode, deep linking via URL hash
- Responsive: mobile hamburger menu, stacked compare panes
- Dark theme with professional blue accents

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ test-results.json
 
 # Docker
 .docker/
+
+# Docs viewer test artifacts
+docs/viewer/node_modules/
+docs/viewer/test-results/
+docs/viewer/playwright-report/
