feat(line-mapping): add multi-line payload tests for github and ado
github tests:
- single-line: line + side only, no start_line
- multi-line: start_line + start_side + line + side
- negative: no start_line when endLine === line

ado tests:
- single-line threadContext (same start/end)
- multi-line threadContext (different start/end)
- same-line edge case handling

hardening fixes:
- github side: RIGHT parameter
- path normalization with oldPath for renames
- fine-grained ValidationStats

all 431 tests passing

--- a/.github/workflows/dogfood-review.yml
+++ b/.github/workflows/dogfood-review.yml
@@ -13,7 +13,7 @@ jobs:
   ai-review:
     # Only run on PRs from the same repo (not forks)
     if: github.event.pull_request.head.repo.full_name == github.repository
-    uses: oddessentials/odd-ai-reviewers/.github/workflows/ai-review.yml@main
+    uses: oddessentials/odd-ai-reviewers/.github/workflows/ai-review.yml@fix/line-mapping-analysis
     with:
       target_repo: ${{ github.repository }}
       target_ref: ${{ github.sha }}
