--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Typecheck
         run: npm run typecheck
 
+      - name: Check circular dependencies
+        run: npm run depcruise
+
       - name: Build
         run: npm run build
 
