--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
     "verify": "npm run lint && npm run format:check && npm run typecheck && npm run build",
+    "depcruise": "depcruise router/src --config .dependency-cruiser.cjs",
     "prepare": "husky"
   },
   "keywords": [
@@ -34,6 +35,7 @@
     "@oddessentials/repo-standards": "6.0.0",
     "@typescript-eslint/eslint-plugin": "8.48.1",
     "@typescript-eslint/parser": "8.48.1",
+    "dependency-cruiser": "17.3.7",
     "eslint": "9.39.1",
     "globals": "16.5.0",
     "husky": "9.1.7",
