--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "8.48.1",
     "dependency-cruiser": "17.3.7",
     "eslint": "9.39.1",
+    "eslint-plugin-security": "3.0.1",
     "globals": "16.5.0",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
