feat(ci): enable zero-tolerance enforcement for lint warnings
- CI lint step now uses --max-warnings 0
- lint-staged uses --max-warnings 0 for local parity
- Add lint:strict npm script for convenience
- Document quality gates in INVARIANTS.md (Appendix B)

Local enforcement now matches CI exactly to prevent pipeline surprises.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run test --workspace=router",
     "test:ci": "npm run test:ci --workspace=router",
     "lint": "eslint .",
+    "lint:strict": "eslint . --max-warnings 0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
@@ -50,7 +51,7 @@
       "prettier --check"
     ],
     "*.{js,cjs,ts,mjs}": [
-      "eslint"
+      "eslint --max-warnings 0"
     ]
   },
   "engines": {
