--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint
+      - name: Lint (zero-tolerance)
+        run: npm run lint -- --max-warnings 0
 
       - name: Format check
         run: npm run format:check
