refactor: eliminate any types and circular dependencies (Flight 3 P1+P2)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "verify": "npm run lint && npm run format:check && npm run typecheck && npm run build",
+    "verify": "npm run lint && npm run format:check && npm run typecheck && npm run depcruise && npm run build",
     "depcruise": "depcruise router/src --config .dependency-cruiser.cjs",
     "prepare": "husky"
   },
@@ -51,7 +51,7 @@
       "prettier --check"
     ],
     "*.{js,cjs,ts,mjs}": [
-      "eslint --max-warnings 0"
+      "eslint --max-warnings 0 --no-warn-ignored"
     ]
   },
   "engines": {
