feat(docs): auto-detect markdown files in docs viewer
- Add manifest generation script for docs discovery

- Update viewer to dynamically load from manifest

- Add CI step to verify manifest stays in sync

- Dynamic document counter in intro screen

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Check circular dependencies
         run: npm run depcruise
 
+      - name: Verify docs manifest
+        run: |
+          npm run docs:manifest
+          git diff --exit-code docs/viewer/manifest.json || (echo "Docs manifest is out of sync. Run 'npm run docs:manifest' and commit." && exit 1)
+
       - name: Build
         run: npm run build
 
