--- a/router/package.json
+++ b/router/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/node": "22.10.7",
     "typescript": "5.7.3",
-    "vitest": "2.1.8"
+    "vitest": "^4.0.0"
   },
   "engines": {
     "node": ">=22.0.0"
