--- a/.github/workflows/dogfood-review.yml
+++ b/.github/workflows/dogfood-review.yml
@@ -21,5 +21,5 @@ jobs:
       # runs_on: '["self-hosted", "ai-review"]'
     secrets:
       # OLLAMA_BASE_URL: http://ollama-sidecar:11434
-      # OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      # ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
