fix(preflight): reject Codex completions-only models for cloud agents
BREAKING: gpt-5.2-codex and other Codex/legacy models are now rejected
during preflight validation when cloud AI agents are enabled.

Root cause: Cloud agents use the chat completions API (/v1/chat/completions)
but Codex models only support the legacy completions API (/v1/completions),
causing 404 errors at runtime.

Changes:
- Add isCompletionsOnlyModel() detection for Codex patterns in providers.ts
- Add validateChatModelCompatibility() preflight guard in preflight.ts
- Re-export isCompletionsOnlyModel from config.ts
- Update .ai-review.yml to use gpt-4o-mini (valid chat model)
- Add 11 comprehensive tests for the new validation

Fixes: 404 error 'This is not a chat model and thus not supported in
the v1/chat/completions endpoint'

--- a/.ai-review.yml
+++ b/.ai-review.yml
@@ -23,9 +23,10 @@ passes:
 #   enabled: true
 #   required: false # Skip if Ollama unavailable
 
-# Or: cloud: gpt-5.2-codex, claude-sonnet-4-20250514, local_llm: deepseek-coder:6.7b, llama3.2:3b, codellama:7b
+# Cloud chat models: gpt-4o, gpt-4o-mini, claude-sonnet-4-20250514
+# Local models: deepseek-coder:6.7b, llama3.2:3b, codellama:7b
 models:
-  default: gpt-5.2-codex
+  default: gpt-4o-mini
 
 limits:
   max_files: 150
