feat(coverage): add Vitest V8 coverage infrastructure
- Install @vitest/coverage-v8@4.0.18 for native V8 coverage
- Create vitest.config.ts with coverage thresholds
- Add test:coverage and test:ci:coverage scripts
- Set baseline thresholds: 65% stmts, 60% branches, 68% funcs, 66% lines

Baseline established from current test suite:
- 721 tests passed, 3 conditionally skipped
- Current: 67.11% stmts, 63.03% branches, 69.79% funcs, 68.14% lines

Flight Y Phase 1

--- a/router/package.json
+++ b/router/package.json
@@ -13,7 +13,9 @@
     "start": "node dist/main.js",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:ci": "vitest run --reporter=json --outputFile=test-results.json",
+    "test:ci:coverage": "vitest run --coverage --reporter=json --outputFile=test-results.json",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "22.10.7",
+    "@vitest/coverage-v8": "4.0.18",
     "typescript": "5.7.3",
     "vitest": "^4.0.0"
   },
