--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Test
-        run: npm run test:ci
+      - name: Test with coverage
+        run: npm run test:ci:coverage --workspace=router
         env:
           CI_HAS_LSOF: 'true' # Ubuntu has lsof - enables socket detection tests
 
@@ -69,13 +69,41 @@ jobs:
 
           echo "{\"schemaVersion\":1,\"label\":\"tests\",\"message\":\"$MESSAGE\",\"color\":\"$COLOR\"}" > .github/badges/tests.json
 
-      - name: Update badge Gist
+      - name: Generate coverage badge data
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          # Extract line coverage percentage from coverage-summary.json
+          COVERAGE=$(jq '.total.lines.pct' router/coverage/coverage-summary.json)
+
+          # Determine badge color based on coverage percentage
+          if (( $(echo "$COVERAGE < 50" | bc -l) )); then
+            COLOR="red"
+          elif (( $(echo "$COVERAGE < 70" | bc -l) )); then
+            COLOR="yellow"
+          elif (( $(echo "$COVERAGE < 80" | bc -l) )); then
+            COLOR="green"
+          else
+            COLOR="brightgreen"
+          fi
+
+          echo "{\"schemaVersion\":1,\"label\":\"coverage\",\"message\":\"${COVERAGE}%\",\"color\":\"$COLOR\"}" > .github/badges/coverage.json
+
+      - name: Update test badge Gist
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: exuanbo/actions-deploy-gist@v1
         with:
           token: ${{ secrets.GIST_TOKEN }}
           gist_id: ${{ vars.TEST_BADGE_GIST_ID }}
           file_path: .github/badges/tests.json
+          file_type: text
+
+      - name: Update coverage badge Gist
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: exuanbo/actions-deploy-gist@v1
+        with:
+          token: ${{ secrets.GIST_TOKEN }}
+          gist_id: ${{ vars.COVERAGE_BADGE_GIST_ID }}
+          file_path: .github/badges/coverage.json
           file_type: text
 
   container-security:
