Revert "ci: switch all workflows to self-hosted Linux runners"
This reverts commit ddae295122d086bb2c9e67a7e21c16ccfbc0d032.

--- a/.github/workflows/ai-review-dispatch.yml
+++ b/.github/workflows/ai-review-dispatch.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   ai-review:
     name: Manual AI Review
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
