--- a/.github/workflows/badge-update.yml
+++ b/.github/workflows/badge-update.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   update-badges:
     name: Update Badge Gists
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
     # Only run if CI workflow succeeded
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
 
