--- a/.github/workflows/dogfood-review.yml
+++ b/.github/workflows/dogfood-review.yml
@@ -19,7 +19,7 @@ jobs:
       target_repo: ${{ github.repository }}
       target_ref: ${{ github.sha }}
       pr_number: ${{ github.event.pull_request.number }}
-      runs_on: '["self-hosted", "linux"]'
+      # runs_on: '["self-hosted", "ai-review"]'
     secrets:
       # OLLAMA_BASE_URL: http://ollama-sidecar:11434
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
