--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -27,7 +27,7 @@ on:
         description: 'Runner labels as JSON (e.g., "ubuntu-latest" or ["self-hosted","linux"])'
         required: false
         type: string
-        default: '["self-hosted", "linux"]'
+        default: '"ubuntu-latest"'
     secrets:
       OPENAI_API_KEY:
         description: 'OpenAI API key (for opencode or pr_agent)'
