--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   quality:
     name: Quality Gates
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -113,7 +113,7 @@ jobs:
   # SC-004: Fresh clone test - verifies hooks auto-install and work correctly
   fresh-clone-test:
     name: Fresh Clone Test
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -168,8 +168,12 @@ jobs:
   # Cross-platform pnpm bin resolution test
   # Ensures ai-review binary is correctly linked on all supported platforms
   bin-resolution-test:
-    name: pnpm Bin Resolution
-    runs-on: ['self-hosted', 'linux']
+    name: pnpm Bin Resolution (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - name: Checkout
@@ -201,7 +205,7 @@ jobs:
 
   container-security:
     name: Container Security Scan
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
     needs: quality
 
     steps:
