--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
   # Pre-publish quality gate - ensures code quality before publishing
   quality-gate:
     name: Quality Gate
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -58,7 +58,7 @@ jobs:
 
   publish:
     name: Publish to npm
-    runs-on: ['self-hosted', 'linux']
+    runs-on: ubuntu-latest
     needs: quality-gate
     permissions:
       contents: read
