--- a/.github/workflows/ai-review-dispatch.yml
+++ b/.github/workflows/ai-review-dispatch.yml
@@ -27,7 +27,7 @@ on:
 jobs:
   ai-review:
     name: Manual AI Review
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
