--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,7 +8,7 @@ on:
       dry_run:
         description: 'Perform a dry-run publish (no actual publish)'
         required: false
-        default: 'false'
+        default: false
         type: boolean
       version_override:
         description: 'Version override (leave empty to use package.json version)'
@@ -24,7 +24,7 @@ jobs:
   # Pre-publish quality gate - ensures code quality before publishing
   quality-gate:
     name: Quality Gate
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -58,7 +58,7 @@ jobs:
 
   publish:
     name: Publish to npm
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     needs: quality-gate
     permissions:
       contents: read
@@ -166,8 +166,8 @@ jobs:
           echo "=== DRY RUN - No actual publish ==="
           npm publish --dry-run --access public
           echo "✓ Dry run completed successfully"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # env:
+        #   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # Actual publish
       - name: Publish to npm
@@ -176,8 +176,8 @@ jobs:
         run: |
           npm publish --access public --provenance
           echo "✓ Published successfully to npm"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # env:
+        #   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       # Post-publish verification
       - name: Verify publication
